[package]
name = "sames"
version = "0.1.0"
description = "SAMES Fair Launch Protocol — everyone gets the SAME price"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sames"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["token_2022"] }
spl-token-2022 = { version = "3.0", features = ["no-entrypoint"] }
spl-transfer-hook-interface = "0.6"
spl-tlv-account-resolution = "0.6"
