[package]
name = "sames"
version = "0.1.0"
description = "SAMES — The Fair Launch Protocol"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sames"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["token-2022"] }
spl-transfer-hook-interface = "0.8"
